# client-server-encrypted-backup-framework-clean

./: -tree -r 696f585  .gitignore  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  .vscodeignore  2025-08-01-claudecodechat.txt  2025-08-05-cpp changes to allow better file transfer.txt  2025-08-05-this-session-is-being-continued-from-a-previous-co.txt  2025-08-06-this-session-is-being-continued-from-a-previous-co.txt  2025-08-11-project_session_fixing.txt  2025-08-11-this-session-is-being-continued-from-a-previous-co.txt  2025-08-12-i-want-you-to-start-implementing-the-plan-i-have.txt  2025-08-24-fixing-fleet-gui.txt  2025-08-26-consolidation-implementation.txt  2025-08-27-trying-to-fix-fleet-problems.txt  2025-08-29-theme-consolidation.txt  2025-08-30-trying-to-fix-flet-gui-table-views-problems-V2.txt  2025-09-03-HiroshimaPlan.txt  2025-09-07-new_architechture.txt  2025-09-07-tricky_button_with_json_searilization_problem.txt  2025-09-22--integration.txt  2025-09-25-look-at-my-vscode-workspace-does-it-have-any-issu.txt  2025-09-28-tri-style-dashboard.txt  2025-09-28-trying_to_fix_dashboard.txt  2025-10-03-trying_to_make_integration_work.txt  2025-10-10-port_old_logs_to_new_enhanced_logs.txt  AGENTS.md  AGENTS.md, QWEN.md, claude.md, copilot-instructions.md  ANALYTICS_API_FIX.md  ANALYTICS_VIEW_ENHANCEMENT_SUMMARY.md  ANALYTICS_VIEW_FIXES.md  ANALYTICS_VIEW_FIX_SUMMARY.md  ARCHITECTURE.md  ASYNC_SYNC_FIX_REPORT.md  All code Snippets and file that are given together with the spesifications file.md  CENTRALIZED_ERROR_BOUNDARY_SYSTEM.md  CHART_CONSOLIDATION_MIGRATION_GUIDE.md  CLAUDE.md  CLAUDE_before_my_edits.md  (+564 more)
.circleci/: config.yml  deployment.yml
.claude/: settings.local.json
.codacy/: codacy.yaml
.config-backup/: pylintrc  pylintrc.archive.ini  pylintrc.txt
.gemini/: GEMINI.md
.github/: copilot-instructions-old.md  copilot-instructions-updated.md  copilot-instructions.md
.kilocode/: mcp.json
.qwen/: PROJECT_SUMMARY.md
.qwent/: settings.json
.serena/: project.yml
AI-CONTEXT-IMPORTANT/: DASHBOARD_DEADLOCK_FIX_24OCT2025.md  Database_Fixes_Summary_01.10.2025.md  Database_Issues_01.10.2025.md  Flet_Web_Hot_Reload.md  MenuBar_flet.md  Navigation_Drawer_flet.md  Server_Audit_Report_01.10.2025.md  Server_Issues_01.10.2025.md
AI-Context/: FletV2_Analysis_01.10.2025.md  Flet_0.28.3_Handbook_for_Agents.md  Flet_Hot-Reload.md  Server_Analysis_Results_01.10.2025.md
Database/: database_manager.py  database_monitor.py
FletV2/: .env  .gitignore  .pylintrc  .sourcery.yaml  2025-09-17-i-want-you-to-make-the-dashboard-more-like-this-im.txt  2025-09-19-this-session-is-being-continued-from-a-previous-co.txt  ANALYTICS_ENHANCEMENT_COMPLETE.md  ASYNC_FIX_SUMMARY.md  COMPREHENSIVE_FLETV2_ANALYSIS_REPORT.md  CONSOLIDATION_OPPORTUNITIES.md  CONSOLIDATION_REPORT.md  CONSOLIDATION_SUMMARY.md  DASHBOARD_ENHANCEMENT_SUMMARY.md  DASHBOARD_REDESIGN_SUMMARY.md  Dashboard_Implementation_Plan.md  Dashboard_Redesign_Plan.md  FLETV2_QUICK_PERFORMANCE_VALIDATION.md  FLETV2_UI_PERFORMANCE_ACHIEVEMENT.md  FLET_0_28_3_violation_report.md  FLET_COLOR_CONSTANTS_GUIDE.md  FLET_SIMPLIFICATION_GUIDE.md  FLET_V2_ARCHITECTURE_SUMMARY.md  FletV2_COMPREHENSIVE_ANALYSIS_2025.md  FletV2_Documentation.md  FletV2_Modularization_Plan.md  FletV2_Server_Integration_Refactor_Plan.md  GEMINI.md  GRAY_AREA_FIX_GUIDE.md  HOW_TO_INTEGRATE_SIMPLIFIED_BRIDGE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS.md  LOGS_VIEW_ENHANCEMENTS.md  MOCK_DATA_REMOVAL_COMPLETE_REPORT.md  MOCK_DATA_REMOVAL_REPORT.md  MODULARIZATION_DOCUMENTATION.md  New_Old_Style_For_GUI.md  New_Plan_11092025.md  OLD_Claude.md  PERFORMANCE_ANALYSIS.md  (+103 more)
Flet_Documentation_From_Context7_&_web/: window.md
Shared/: __init__.py  canonicalize.py  config.py  config_manager.py  crc.py  filename_validator.py  logging_utils.py  observability.py  observability_middleware.py  path_utils.py  sentry_config.py  setup.cfg  unified_config_manager.py  unified_monitor.py
_legacy/: README.md
_tmp/: freeze_dotvenv.txt  freeze_fletV2_flet_venv.txt  freeze_merged_flet_venv.txt  freeze_root_flet_venv.txt  import_check.py  merge_extra_requirements.txt  merge_extra_requirements_no_git.txt  package_names_missing_from_fletV2.txt  packages_missing_in_flet_venv.txt  piplist_dotvenv.json  piplist_flet_venv.json
ai-context/: FLET_DESKTOP_GUIDE.md
api-server/: cyberbackup_api_server.py
api_server/: __init__.py  cyberbackup_api_server.py  real_backup_executor.py
archive/: legacy_filter_chip_polyfill.py  state_migration.py
backups/: settings_backup_20250825_192551.json  settings_backup_20250825_192850.json  settings_backup_20250825_200809.json  settings_backup_20250825_200848.json
build_backup/: ALL_BUILD.vcxproj  EncryptedBackupClient.sln  EncryptedBackupClient.vcxproj  ZERO_CHECK.vcxproj
client/: me.info  me_info_hex.txt  run_real_backup.bat  status_log.json  test_file.txt  valid_private_key.der  valid_public_key.der
config/: .clang-format  .clang-tidy  .env.template  .sourcery.yaml  __init__.py  appmap.yml  chart_settings.json  config.json  database_config.py  default.json  development.json  mypy.ini  server_gui_settings.json
cpp_api_server/: CMakeLists.txt  ENDPOINT_INVENTORY.md  PHASE1_SUMMARY.txt  start_cpp_api_server.ps1
cpp_api_server/cmake/: presets.json
cpp_api_server/config/: default_config.json
cpp_api_server/include/cpp_api_server/: AppServer.h  DatabaseService.h  Notifier.h  StatusWebSocketController.h
cpp_api_server/src/: HealthController.cpp  Notifier.cpp
docs/: 07.06.2025  08.06.2025 suggestions on whats next.md  2025-08-03-Claude-Code_session_about_progress_showing_not_showing.txt  2025-09-24-settings-migration-summary.md  AES_COMPATIBILITY_VALIDATION_REPORT.md  AES_CRYPTO_INTEGRATION_GUIDE.md  AES_IMPLEMENTATION_REPORT.md  API_SERVER_UNIFICATION.md  BUILD_ORGANIZATION.md  CHAT_CONTEXT_SUMMARY.md  CIRCLECI_CRITICAL_CONSIDERATIONS.md  CIRCLECI_SETUP_GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_REVIEW_REPORT.md  COMPLETE_MULTI_LAYER_ARCHITECTURE.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  (+34 more)
(+1368 files in other folders)
